@@ -13,6 +13,8 @@ version 0.11.0-pre11:
 	* Can rename groups/buddies in the Edit Buddies pane
 	  (thanks Neil Sanchala)
 	* Some perl updates (thanks to Sean Egan)
+	* IRC got the following slash commands:
+      op, deop, voice, devoice, mode, raw, quote, and kick
 
 version 0.11.0-pre10 (04/13/2001):
 	* Many, many bug fixes
